Fixed horizontal scroll bar in the main pane

--- a/client/main.css
+++ b/client/main.css
@@ -130,8 +130,13 @@ a, a:link, a:hover, a:active, a:visited {
   font-size: 32px;
 }
 
+.job {
+  width: calc(100% - 5px);
+  padding-left: 5px;
+}
+
 .job-header {
-  padding-bottom: 15px;
+
 }
 
 .job-header .job-number {
@@ -144,7 +149,7 @@ a, a:link, a:hover, a:active, a:visited {
 
 .cargo-container {
   border-radius: 5px;
-  background-color: #eee;
+  background-color: #ddd;
   padding-top: 3px;
   padding-bottom: 3px;
   margin-bottom: 5px;
@@ -159,7 +164,7 @@ a, a:link, a:hover, a:active, a:visited {
 
 .cargo-package {
   border-radius: 5px;
-  background-color: #ddd;
+  background-color: #c9c9c9;
   margin-left: 10px;
   margin-right: 10px;
 }
